force-app/main/default/objects/Competitive_Insights__c/Competitive_Insights__c.object-meta.xml
<CustomObject>
    <label>Competitive Insight</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Competitive Insight</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Competitive Insights</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>