force-app/main/default/objects/Competitive_Insights__c/fields/Competitor_Install_Year__c.field-meta.xml
<CustomField>
    <fullName>Competitor_Install_Year__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Competitor Install Year</label>
    <length>5</length>
    <type>Text</type>
</CustomField>