force-app/main/default/objects/Competitive_Insights__c/fields/Health_Care_Facility__c.field-meta.xml
<CustomField>
    <fullName>Health_Care_Facility__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Health Care Facility</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Competitive Insights</relationshipLabel>
    <relationshipName>Competitive_Insights</relationshipName>
    <type>Lookup</type>
</CustomField>