force-app/main/default/objects/Competitive_Insights__c/fields/Number_of_Competitor_Robots__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Competitor_Robots__c</fullName>
    <label>Number of Competitor Robots</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>