force-app/main/default/objects/Competitive_Insights__c/fields/of_ROSA_Robots__c.field-meta.xml
<CustomField>
    <fullName>of_ROSA_Robots__c</fullName>
    <label># of ROSA Robots</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>