force-app/main/default/objects/Competitive_Insights__c/fields/Robot_Company__c.field-meta.xml
<CustomField>
    <fullName>Robot_Company__c</fullName>
    <label>Robot Company</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Depuy</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>S&amp;N</fullName>
            </value>
            <value>
                <fullName>Stryker</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>