force-app/main/default/objects/Competitive_Insights__c/fields/Robot_Product__c.field-meta.xml
<CustomField>
    <fullName>Robot_Product__c</fullName>
    <label>Robot Product</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>CORI</fullName>
            </value>
            <value>
                <fullName>MAKO</fullName>
            </value>
            <value>
                <fullName>NAVIO</fullName>
            </value>
            <value>
                <fullName>Velys</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>