force-app/main/default/objects/Competitive_Insights__c/fields/ROSA_Install_Date__c.field-meta.xml
<CustomField>
    <fullName>ROSA_Install_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>ROSA Install Date</label>
    <type>Date</type>
</CustomField>