force-app/main/default/objects/Competitive_Insights__c/fields/Velys_segmentation__c.field-meta.xml
<CustomField>
    <fullName>Velys_segmentation__c</fullName>
    <label>Velys Segmentation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>On the Fence</fullName>
            </value>
            <value>
                <fullName>ROSA Advantage</fullName>
            </value>
            <value>
                <fullName>Velys Advantage</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>