force-app/main/default/objects/Competitive_Insights__c/recordTypes/Velys.recordType-meta.xml
<RecordType>
    <fullName>Velys</fullName>
    <active>true</active>
    <label>Velys</label>
</RecordType>